The design of the notices and users table is finished

--- a/src/app/shared/admin/admin-content-container/admin-content-container.component.html
+++ b/src/app/shared/admin/admin-content-container/admin-content-container.component.html
@@ -6,8 +6,10 @@
     <ng-container>
       <mr-table
         [headers]="[
-          ['Pito',''],
-          ['Pitazo',''],
+          ['','2rem'],
+          ['Título','10rem'],
+          ['Descripción','10rem'],
+          ['Acciones','10rem'],
         ]"
         [items]="data.notices?.notices || []"
         [itemTemplateRef]="noticeTemplate"
@@ -17,10 +19,19 @@
 </ng-container>
 
 <ng-template #noticeTemplate let-notice="item" let-index="index">
-  <td class="agencies-back-office-tmpl__td">
-    {{notice.title}}
+  <td class="td__notice">
+    <figure class="figure__notice">
+      <mr-image [image]="notice.icon.url" [rounded]="'circle'" [alt]="'icon-notice'"></mr-image>
+    </figure>
   </td>
-  <td class="agencies-back-office-tmpl__td">
-    {{notice.description}}
+  <td class="td__notice">
+    <mr-text [color]="'initial'" [type]="'line'" [text]="notice.title" [size]="'base'" [weight]="'regular'"></mr-text>
   </td>
-</ng-template>
+  <td class="td__notice">
+    <mr-text [color]="'initial'" [type]="'line'" [text]="notice.description" [size]="'base'" [weight]="'regular'"></mr-text>
+  </td>
+  <td class="td__notice">
+    <mr-button [display]="'block'" [icon]="'fas fa-pen'" [label]="'Editar'"></mr-button>
+    <mr-button [display]="'block'" [icon]="'fas fa-trash'" [label]="'Eliminar'"></mr-button>
+  </td>
+</ng-template> 
