--- a/src/app/ui/blocks/table/table.component.html
+++ b/src/app/ui/blocks/table/table.component.html
@@ -8,7 +8,9 @@
             class="table__th"
             scope="col"
             [style.width]="label[1]"
-          >{{label[0]}}</th>
+          >
+          <mr-text [color]="'initial'" [type]="'line'" [text]="label[0]" [size]="'base'" [weight]="'bold'"></mr-text>
+        </th>
         </tr>
       </thead>
       <tbody class="table__tbody">
