--- a/src/app/ui/_styles/_box-model.scss
+++ b/src/app/ui/_styles/_box-model.scss
@@ -19,10 +19,15 @@ $pad-double: $_pad-base * 2;
 $pad-triple: $_pad-base * 3;
 
 $wth-block: 100%;
+$wth-base: $_pad-base;
+$wth-onehalf: $_pad-base*1.5;
+$wth-double: $_pad-base*2;
+
 
 $hht-block: 100%;
 $hht-base: $_pad-base;
 $hht-onehalf: $_pad-base*1.5;
+$hht-double: $_pad-base*2;
 
 $bor-solid: $_pad-base * 0.0625 solid;
 
@@ -56,4 +61,8 @@ $hht-home-content-logo: $_pad-base*20;
 $hht-home-content-logo-tbl: $_pad-base*16;
 $pad-home-content-description: $_pad-base*4;
 
+// Floating card
 $hht-floating-card: $_pad-base*20;
+
+// Column list
+$wth-column-list: $_pad-base * 10;
