Create notices service was implemented

--- a/src/app/shared/admin/admin-notices-list-container/admin-notices-list-container.component.html
+++ b/src/app/shared/admin/admin-notices-list-container/admin-notices-list-container.component.html
@@ -3,5 +3,6 @@
 } as data">
   <mr-admin-notices-list 
     [notices]="data.notices"
+    (createNotice)="handleCreateNotice($event)"
   ></mr-admin-notices-list>
 </ng-container>
