--- a/src/app/ui/blocks/admin-notices-list/admin-notices-list.component.html
+++ b/src/app/ui/blocks/admin-notices-list/admin-notices-list.component.html
@@ -57,6 +57,8 @@
 
 <mr-modal #modalRef>
   <ng-container>
-    <mr-form-notice></mr-form-notice>
+    <mr-form-notice
+      (dataOutput)="handleCreateNotice($event)"
+    ></mr-form-notice>
   </ng-container>
 </mr-modal>
