--- a/src/app/ui/forms/form-notice/form-link/form-link.component.html
+++ b/src/app/ui/forms/form-notice/form-link/form-link.component.html
@@ -1,1 +1,23 @@
-<p>form-link works!</p>
+<form class="form-link" [formGroup]="form.formGroup">
+  <fieldset class="form-link__section">
+    <mr-sub-form-input 
+      [type]="'input'"
+      [label]="'Nombre'"
+      [icon]="'fas fa-signature'"
+      [formControlName]="form.formControlNames.name"
+    ></mr-sub-form-input>
+
+    <mr-sub-form-input 
+      [type]="'input'"
+      [label]="'Enlace'"
+      [icon]="'fas fa-link'"
+      [formControlName]="form.formControlNames.url"
+    ></mr-sub-form-input>
+
+    <mr-button-icon
+      class="form-links__actions--delete"
+      [icon]="'trash'"
+      (clicked)="handleDeleteControl()"
+    ></mr-button-icon>
+  </fieldset>
+</form>
