--- a/src/app/ui/blocks/admin-notices-list/admin-notices-list.component.html
+++ b/src/app/ui/blocks/admin-notices-list/admin-notices-list.component.html
@@ -58,6 +58,7 @@
 <mr-modal #modalRef>
   <ng-container>
     <mr-form-notice
+      [canResetForm]="canCloseModal"
       (dataOutput)="handleCreateNotice($event)"
     ></mr-form-notice>
   </ng-container>
