User table added

--- a/src/app/shared/admin/admin-content-container/admin-content-container.component.html
+++ b/src/app/shared/admin/admin-content-container/admin-content-container.component.html
@@ -5,5 +5,9 @@
     <mr-admin-notices-list-container 
       *ngIf="tabs.active === tabEnum.notices"
     ></mr-admin-notices-list-container>
+
+    <mr-admin-users-list-container 
+      *ngIf="tabs.active === tabEnum.users"
+    ></mr-admin-users-list-container>
   </mr-tabs>
 </ng-container>
