Added logic to delete users and communications

--- a/src/app/shared/admin/admin-notices-list-container/admin-notices-list-container.component.html
+++ b/src/app/shared/admin/admin-notices-list-container/admin-notices-list-container.component.html
@@ -6,5 +6,6 @@
     [notices]="data.notices"
     [canCloseModal]="data.canCloseModal"
     (createNotice)="handleCreateNotice($event)"
+    (deleteNotice)="handleDeleteNotice($event)"
   ></mr-admin-notices-list>
 </ng-container>
