--- a/src/app/ui/blocks/admin-notices-list/admin-notices-list.component.html
+++ b/src/app/ui/blocks/admin-notices-list/admin-notices-list.component.html
@@ -51,6 +51,7 @@
     <mr-button 
       [display]="'block'" 
       [icon]="'fas fa-trash'" 
+      (clicked)="handleDeleteNotice(notice)"
     ></mr-button>
   </td>
 </ng-template>
