--- a/src/app/ui/forms/form-user/form-user.component.html
+++ b/src/app/ui/forms/form-user/form-user.component.html
@@ -79,6 +79,7 @@
   <fieldset class="form-user__file">
     <mr-sub-form-file
       [label]="'Adjuntar imagen de perfil'"
+      [canResetImage]="canResetForm"
       [formControlName]="form.formControlNames.image"
     ></mr-sub-form-file>
   </fieldset>
