--- a/src/app/shared/admin/admin-users-list-container/admin-users-list-container.component.html
+++ b/src/app/shared/admin/admin-users-list-container/admin-users-list-container.component.html
@@ -1,8 +1,18 @@
 <ng-container *ngIf="{
-  users: (users$ | async)
+  users: (users$ | async),
+  hobbies: (hobbies$ | async),
+  cities: (cities$ | async),
+  states: (states$ | async),
+  canCloseModal: (canCloseModal$ | async)
 } as data">
     <mr-admin-users-list 
       [users]="data.users"
+      [hobbies]="data.hobbies"
+      [cities]="data.cities" 
+      [states]="data.states"
+      [canCloseModal]="data.canCloseModal"
+      (stateSelected)="handleSelectState($event)"
+      (createUser)="handleCreateUser($event)"
       (deleteUser)="handleDeleteUser($event)"
     ></mr-admin-users-list>
 </ng-container>
