Reset users form was completed

--- a/src/app/ui/forms/form-user/form-user.component.html
+++ b/src/app/ui/forms/form-user/form-user.component.html
@@ -39,6 +39,7 @@
         [icon]="'fas fa-skating'"
         [options]="hobbies"
         [isSearchable]="true"
+        [canResetForm]="canResetForm"
         [formControlName]="form.formControlNames.hobbies"
       ></mr-sub-form-multi-select>
   
