Added service to fetch channel options

--- a/src/app/ui/blocks/admin-notices-list/admin-notices-list.component.html
+++ b/src/app/ui/blocks/admin-notices-list/admin-notices-list.component.html
@@ -59,6 +59,7 @@
 <mr-modal #modalRef>
   <ng-container>
     <mr-form-notice
+      [notices]="notices"
       [canResetForm]="canCloseModal"
       (dataOutput)="handleCreateNotice($event)"
     ></mr-form-notice>
