--- a/src/app/ui/forms/form-notice/form-notice.component.html
+++ b/src/app/ui/forms/form-notice/form-notice.component.html
@@ -28,6 +28,15 @@
     ></mr-form-links>
   </fieldset>
 
+  <fieldset class="form-notice__description">
+    <mr-sub-form-select
+      [placeholder]="'Seleccione un canal'"
+      [options]="notices"
+      [label]="'Canal'"
+      [icon]="'fas fa-sort'"
+    ></mr-sub-form-select>
+  </fieldset>
+
   <fieldset class="form-notice__file">
     <mr-sub-form-file
       [label]="'Adjuntar icono'"
