--- a/src/app/ui/blocks/register-content/register-content.component.html
+++ b/src/app/ui/blocks/register-content/register-content.component.html
@@ -7,7 +7,7 @@
         [states]="states"
         [hobbies]="hobbies"
         (dataOutput)="handleCreateUser($event)"
-        (stateSelected)="handleLoadCities($event)"
+        (formUpdate)="handleLoadCities($event)"
       ></mr-form-user>
     </ng-container>
   </mr-card>
