--- a/src/app/shared/admin/admin-users-list-container/admin-users-list-container.component.html
+++ b/src/app/shared/admin/admin-users-list-container/admin-users-list-container.component.html
@@ -3,16 +3,20 @@
   hobbies: (hobbies$ | async),
   cities: (cities$ | async),
   states: (states$ | async),
-  canCloseModal: (canCloseModal$ | async)
+  canCloseModal: (canCloseModal$ | async),
+  userToUpdate: (userToUpdate$ | async)
 } as data">
     <mr-admin-users-list 
       [users]="data.users"
       [hobbies]="data.hobbies"
       [cities]="data.cities" 
       [states]="data.states"
+      [userToUpdate]="data.userToUpdate"
       [canCloseModal]="data.canCloseModal"
       (stateSelected)="handleSelectState($event)"
       (createUser)="handleCreateUser($event)"
       (deleteUser)="handleDeleteUser($event)"
+      (loadUserToUpdate)="handleLoadUserToUpdate($event)"
+      (updateUser)="handleUpdateUser($event)"
     ></mr-admin-users-list>
 </ng-container>
