Added home routing

--- a/src/app/ui/blocks/home-content/home-content.component.scss
+++ b/src/app/ui/blocks/home-content/home-content.component.scss
@@ -24,6 +24,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    cursor: pointer;
 
     &--red {
       .text--initial {
