Added the facade to bring the channel according to the route

--- a/src/app/ui/blocks/channels-content/channels-content.component.html
+++ b/src/app/ui/blocks/channels-content/channels-content.component.html
@@ -29,6 +29,7 @@
                   [image]="notice?.icon?.url"
                   [title]="notice?.title"
                   [channel]="notice?.channel"
+                  (click)="navigateToNotice('notices', notice.id)"
                 ></mr-notice>
             </div>
         </ng-container>
